# youth-wallet-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  test_api.py
data/: region_codes.csv
docs/: idea.md
src/: __init__.py  __main__.py  config.py  server,py  server.py
src/clients/: __init__.py  youth_wallet_client.py
src/constants/: __init__.py  gender.py  policy_categories.py  regions.py
src/schemas/: __init__.py  checklist.py  eligibility.py  policy.py  profile.py  requirements.py
src/services/: __init__.py  age_calculator.py  application_checklist_builder.py  eligibility_checker.py  follow_up_question_generator.py  policy_comparator.py  policy_detail_service.py  policy_eligibility_service.py  policy_filter_service.py  policy_search_service.py  profile_parser.py  region_code_service.py  requirement_extractor.py
src/tools/: __init__.py  checklist.py  compare_tools.py  eligibility_tools.py  policy_detail_tool.py  policy_search_tools.py  profile_tools.py  search_policy_tool.py
